--- a/css/style.css
+++ b/css/style.css
@@ -460,10 +460,41 @@ nav.active_nav {
 
 .subscription {
     background: #f7e05f;
+    background: var(--primary-color);
     height: 100vh;
     padding-top: 100px;
 }
 
+.subscription h1 {
+    margin-bottom: 3vw;
+    font-family: 'Calibre Medium' ,Arial,sans-serif;
+    font-size: 9vw;
+    line-height: 8vw;
+    letter-spacing: -.3vw;
+    font-weight: 500;
+    color: #0D0E0E;
+    color: #fff;
+}
+
+.subscription h4 {
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.subscription p {
+    font-family: "Source Sans Pro",sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #303030;
+    color: #fff;
+    line-height: 1.56; letter-spacing: 0;
+}
+
+#reveal_subscription {
+    color: #fff;
+}
 
 .subscription input {
     height: 60px;
@@ -484,9 +515,10 @@ nav.active_nav {
 
 .subscription button {
     background: #0D0E0E;
+    background: #fff;
     border: #0D0E0E;
     border-radius: 0px;
-    color: #fff;
+    color: var(--primary-color);
     transition: 0.5s;
 }
 
@@ -495,6 +527,7 @@ nav.active_nav {
     border: #0D0E0E;
     border-radius: 0px;
     color: #fff;
+    color: var(--primary-color);
 }
 
 .subscription .form-control:focus {
@@ -511,7 +544,8 @@ nav.active_nav {
     left: 0;
     top: 70px;
     box-shadow: 0 6px 22px rgba(0,0,0,.4);
-    z-index: 1
+    z-index: 1;
+    display: none;
 }
 
 
@@ -602,7 +636,7 @@ nav.active_nav {
     }
 
     .subscription {
-        background: #f7e05f;
+        background: var(--primary-color);
         height: auto;
         padding-top: 100px;
     }
@@ -613,7 +647,8 @@ nav.active_nav {
         position: absolute;
         left: 0;
         box-shadow: 0 6px 22px rgba(0,0,0,.4);
-        z-index: 1
+        z-index: 1;
+        display: none;
     }
 
     .latest {
