--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,15 @@ nav.active_nav {
     box-shadow: 0px 2px 4px rgba(126, 142, 177, 0.12);
 }
 
+.social_share{
+    transition: 0.2s;
+}
+
+.social_share li:hover {
+    transform: scale(1.1);
+    transition: 0.2s;
+    cursor: pointer;
+}
 
 
 @media (min-width:320px) and (max-width: 800px) {
